package ar.edu.utn.frba.dds.fuenteDinamica.models.entities;

public enum EstadoHecho {
    PENDIENTE_DE_REVISION,
    ACEPTADA,
    ACEPTADA_CON_SUGERENCIA,
    RECHAZADA
}
